<resources>
    <string name="app_name">todo</string>

    // Empty Screen
    <string name="empty_title">Infelizmente não foi cadasrrado nenhum item :(</string>
    <string name="retry_text">Tentar Novamente</string>

    // New task Dialog
    <string name="add_new_task_text">Adicionar Task</string>
    <string name="new_task_title">Digite o nome da task</string>
    <string name="new_task_hint">Digite o nome da task</string>
    <string name="new_task_button_name">Criar task</string>

    // Home Screen
    <string name="home_title">Lista de tarefas</string>

    // Dialog
    <string name="delete_task_description">Deseja realmente deletar esse item?</string>
    <string name="delete_task_negative">Não</string>
    <string name="delete_task_accept">Sim</string>
</resources>