...
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/primary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="ToDo List Expresso"
        app:titleTextColor="@color/secondary" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/new_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/secondary"
        android:contentDescription="@string/add_new_task_text"
        android:src="@drawable/ic_add_task"
...
